--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.html
@@ -54,7 +54,7 @@
         </div>
         <div class="row" id="packets" *ngIf="!disable">
             <div class="col">
-                <kt-packets></kt-packets>
+                <kt-upload-packets></kt-upload-packets>
             </div>
         </div>
     </kt-portlet-body>
