--- a/gold-admin-frontend/src/app/views/pages/user-management/broker/add-broker/add-broker.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/broker/add-broker/add-broker.component.html
@@ -24,28 +24,32 @@
                         <!-- Partner Name -->
                         <div class="row">
                             <div class="col-4 form-label">
-                                <mat-label for="" [class.mandatory]="data.action!=view" class="text-color ">Merchant Name</mat-label>
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color ">Merchant
+                                    Name</label>
                             </div>
                             <div class="col-8">
                                 <select class="form-control" formControlName="merchantId" autocomplete="off"
-                                    [class.isError]="controls.merchantId.touched && controls.merchantId.invalid">
+                                    [class.isError]="controls.merchantId.touched && controls.merchantId.invalid" (change)="getStore()">
                                     <option value="" [selected]="true" [disabled]="true">Select</option>
                                     <option [value]="merchant.id" *ngFor="let merchant of merchants">
-                                        {{merchant.merchantName}}</option>
+                                        {{merchant.merchantName | titlecase}}</option>
                                 </select>
-                                <mat-error
-                                    *ngIf="controls.merchantId.touched && controls.merchantId.errors?.required">
+                                <mat-error *ngIf="controls.merchantId.touched && controls.merchantId.errors?.required">
                                     Required
                                     field</mat-error>
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <mat-label for="" [class.mandatory]="data.action!=view" class="text-color ">Broker ID</mat-label>
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color ">Store ID
+                                </label>
                             </div>
                             <div class="col-8">
-                                <input class="form-control" formControlName="storeId" placeholder="e.g 012345"
-                                    [class.isError]="controls.storeId.touched && controls.storeId.invalid">
+                                <select class="form-control" formControlName="storeId" autocomplete="off"
+                                [class.isError]="controls.storeId.touched && controls.storeId.invalid">
+                                <option value="" [selected]="true" [disabled]="true">Select</option>
+                                <option [value]="store.id"*ngFor="let store of store">{{store.storeUniqueId}}</option>
+                                </select>
                                 <mat-error *ngIf="controls.storeId.errors?.required && controls.storeId.touched">
                                     Required field
                                 </mat-error>
@@ -53,7 +57,8 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <mat-label for="" [class.mandatory]="data.action!=view" class="text-color ">Full Name</mat-label>
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color ">Full Name
+                                </label>
                             </div>
                             <div class="col-8">
                                 <div class="row">
@@ -86,7 +91,8 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <mat-label for="" [class.mandatory]="data.action!=view" class="text-color ">Mobile Number</mat-label>
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color ">Mobile
+                                    Number</label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" numbersOnly maxlength="10" formControlName="mobileNumber"
@@ -100,7 +106,8 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <mat-label for="" [class.mandatory]="data.action!=view" class="text-color ">Email</mat-label>
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color ">Email
+                                </label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" formControlName="email" placeholder="e.g abc@123.com"
@@ -114,11 +121,12 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <mat-label for="" [class.mandatory]="data.action!=view" class="text-color font-weight-500">Address</mat-label>
+                            <div class="col-4 form-label">
+                                <label for="" [class.mandatory]="data.action!=view"
+                                    class="text-color font-weight-500">Address</label>
                             </div>
                             <div class="col-8">
-                                <textarea cols="10" rows="5" class="form-control" formControlName="address"
+                                <textarea cols="3" rows="3" class="form-control" formControlName="address"
                                     [class.isError]="controls.address.touched && controls.address.invalid"
                                     placeholder="Address"></textarea>
                                 <mat-error *ngIf="controls.address.errors?.required && controls.address.touched">
@@ -129,14 +137,14 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <mat-label for="" [class.mandatory]="data.action!=view" class="text-color ">State</mat-label>
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color ">State
+                                </label>
                             </div>
                             <div class="col-8">
                                 <select class="form-control" formControlName="stateId" autocomplete="off"
                                     [class.isError]="controls.stateId.touched && controls.stateId.invalid"
                                     (change)="getCities()">
                                     <option value="" [selected]="true" [disabled]="true">Select</option>
-                                    <option value="1" >Select</option>
                                     <option [value]="stateId.id" *ngFor="let stateId of states">{{stateId.name}}
                                     </option>
                                 </select>
@@ -146,13 +154,13 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <mat-label for="" [class.mandatory]="data.action!=view" class="text-color ">City</mat-label>
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color ">City
+                                </label>
                             </div>
                             <div class="col-8">
                                 <select class="form-control" formControlName="cityId" autocomplete="off"
                                     [class.isError]="controls.cityId.touched && controls.cityId.invalid">
                                     <option value="" [selected]="true" [disabled]="true">Select</option>
-                                    <option value="1">Select</option>
                                     <option [value]="cityId.id" *ngFor="let cityId of citys">{{cityId.name}}
                                     </option>
                                 </select>
@@ -162,66 +170,75 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <mat-label for="" [class.mandatory]="data.action!=view" class="text-color ">Pin Code</mat-label>
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color ">Pin Code
+                                </label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" numbersOnly maxlength="6" formControlName="pinCode"
-                                    placeholder="e.g 012345">
+                                    placeholder="e.g 012345" [class.isError]="controls.pinCode.touched && controls.pinCode.invalid">
+                                    <mat-error *ngIf="controls.pinCode.touched && controls.pinCode.errors?.required">
+                                        Required field</mat-error>
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <mat-label for="" [class.mandatory]="data.action!=view" class="text-color ">PAN No.</mat-label>
+                                <label for="" class="text-color ">PAN No.
+                                </label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" type="text" formControlName="panCardNumber"
-                                    placeholder="e.g qwert1234q" [class.isError]="controls.panCardNumber.touched && controls.panCardNumber.errors?.pattern">
-                                    <mat-error *ngIf="controls.panCardNumber.touched && controls.panCardNumber.errors?.pattern">
-                                        Invalid field</mat-error>
+                                    placeholder="e.g qwert1234q"
+                                    [class.isError]="controls.panCardNumber.touched && controls.panCardNumber.errors?.pattern">
+                                <mat-error
+                                    *ngIf="controls.panCardNumber.touched && controls.panCardNumber.errors?.pattern">
+                                    Invalid field</mat-error>
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <mat-label for="" [class.mandatory]="data.action!=view" class="text-color ">Name on PAN</mat-label>
+                                <label for="" class="text-color ">Name on PAN
+                                </label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" type="text" formControlName="nameOnPanCard"
                                     placeholder="John">
-                                    
+
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <mat-label for="" [class.mandatory]="data.action!=view" class="text-color ">Upload PAN</mat-label>
+                                <label  class="text-color ">Upload PAN
+                                </label>
                             </div>
                             <div class="col-8">
                                 <div class="input-group mb-3">
                                     <input type="text" class="form-control" formControlName="imgName"
-                                        placeholder="image.jpg" aria-label="Image" aria-describedby="basic-addon2" [disabled]="true">
+                                        placeholder="image.jpg" aria-label="Image" aria-describedby="basic-addon2">
                                     <div class="input-group-append">
                                         <span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
                                             (click)="file.click()">Attach</span>
                                     </div>
                                 </div>
-       form-label                          <mat-label class="file d-none">
-       [class.mandatory]="data.action!=view"                              <input type="file" id="file" aria-label="File browser example" #file
-                                        (input)="getFileInfo($event)">
-                                    <span class="file-custom"></span>
-                                </mat-label>
-                                
+                                <input type="file" id="file" aria-label="File browser example" #file
+                                    (input)="getFileInfo($event)" class="d-none">
+                                <span class="file-custom"></span>
+
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <mat-label for="" [class.mandatory]="data.action!=view" class="text-color ">Status</mat-label>
+                                <label for="" [class.mandatory]="data.action!=view" class="text-color ">Status
+                                </label>
                             </div>
                             <div class="col-8">
                                 <select class="form-control" formControlName="approvalStatusId" autocomplete="off"
                                     [class.isError]="controls.approvalStatusId.touched && controls.approvalStatusId.invalid">
-                                    <option value="" [selected]="true" [disabled]="true">Select</option>
-                                    <option [value]="st.id" *ngFor="let st of status">{{st.statusName | titlecase}}</option>
+                                    <option value="" selected disabled>Select</option>
+                                    <option [value]="st.id" *ngFor="let st of status">{{st.statusName | titlecase}}
+                                    </option>
                                 </select>
-                                <mat-error *ngIf="controls.approvalStatusId.touched && controls.approvalStatusId.errors?.required">
+                                <mat-error
+                                    *ngIf="controls.approvalStatusId.touched && controls.approvalStatusId.errors?.required">
                                     Required field</mat-error>
                             </div>
                         </div>
