--- a/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.html
@@ -3,8 +3,7 @@
     <kt-portlet-body>
 
         <div class="mat-table__wrapper" [ngStyle]="{'overflow-x':'hidden'}">
-            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
-                matSortActive="id" matSortDirection="asc" matSortDisableClear>
+            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
 
                 <ng-container matColumnDef="fullName">
                     <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
