--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/view-merchant/view-merchant.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/view-merchant/view-merchant.component.html
@@ -98,10 +98,10 @@
                      *ngFor="let commisson of merchant.commissionData;index as idx">
                         <div class="row">
                             <div [ngClass]="idx%2==0 ? 'col-5' :'col-6'">
-                                <label class=" kt-padding-t-5 kt-padding-b-5 text-gray font-weight-500">Commission</label>
+                                <label class=" kt-padding-t-5 kt-padding-b-5 text-gray font-weight-500">{{commisson.category.categoryName}}</label>
                             </div>
                             <div [ngClass]="idx%2==0 ? 'col-7' :'col-6'">
-                                <label class=" kt-padding-t-5 kt-padding-b-5 text-color font-weight-500">Merchant Name</label>
+                                <label class=" kt-padding-t-5 kt-padding-b-5 text-color font-weight-500">{{commisson.commission}}</label>
                             </div>
                         </div>
                     </div>
