--- a/gold-admin-frontend/src/app/views/pages/user-management/roles/roles-list/roles-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/roles/roles-list/roles-list.component.html
@@ -4,8 +4,7 @@
 		<!-- MATERIAL TABLE | Binded to datasources -->
 		<!-- See off.documentations 'https://material.angular.io/components/table/overview' -->
 		<div class="mat-table__wrapper">
-			<mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
-				matSortActive="id" matSortDirection="asc" matSortDisableClear>
+			<mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
 				<!-- Checkbox Column -->
 
 				<!-- Table with selection -->
