View images carousel in View Product

--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-edit/product-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-edit/product-edit.component.html
@@ -124,7 +124,8 @@
         <div class="row">
             <div class="col-12">
                 <div class="text-center">
-                    <img class="viewProductImage" [src]="productData?.productImage">
+                    <kt-image-preview-dialog [viewImages]="productData?.productImages" [type]="'view'">
+                    </kt-image-preview-dialog>
                 </div>
             </div>
         </div>
