--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-list/product-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-list/product-list.component.html
@@ -49,7 +49,8 @@
                     <mat-header-cell *matHeaderCellDef>Design</mat-header-cell>
                     <mat-cell *matCellDef="let element" matTooltipClass="primary-tooltip">
                         <div class="pt-2 pr-2 pb-2">
-                            <img height="40" width="40" [src]="element?.productImage">
+                            <img height="40" width="40"
+                                [src]="element?.productImage != '0' ? element?.productImage: 'assets/media/icons/image-placeholder.png'">
                         </div>
                     </mat-cell>
                 </ng-container>
